fix footer sticky issue, fix shopping page horizontal scrolling

--- a/LendingLibrary/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/LendingLibrary/app/assets/stylesheets/foundation_and_overrides.scss
@@ -55,6 +55,12 @@
 // @include motion-ui-transitions;
 // @include motion-ui-animations;
 
+// layout
+body{
+  overflow-y: scroll;
+}
+
+
 // Nav bar style
 .top-bar-left{
     background-color: transparent;
